# Multiverse-Parser

./: .gitignore  README.md  build_package.bat  build_package.sh  converter.py  install.bat  install.sh  pyproject.toml  requirements.txt  setup.bat  setup.sh  test.py
.github/workflows/: ubuntu-22.04.yml  ubuntu-24.04.yml  ubuntu-windows.yml  windows.yml
USD/lib/: libtbb.so.2  libtbb_debug.so.2  libtbbmalloc.so.2  libtbbmalloc_debug.so.2  libtbbmalloc_proxy_debug.so.2  usd_ar.lib  usd_arch.lib  usd_gf.lib  usd_ndr.lib  usd_pcp.lib  usd_python.lib  usd_sdf.lib  usd_sdr.lib  usd_trace.lib  usd_ts.lib  usd_usdGeom.lib  usd_usdHydra.lib  usd_usdMedia.lib  usd_usdPhysics.lib  usd_usdProc.lib  usd_usdRi.lib  usd_usdSemantics.lib  usd_usdShade.lib  usd_usdUI.lib  usd_usdVol.lib  usd_vt.lib  usd_work.lib
USD/linux/lib/: libtbb.so.2  libtbb_debug.so.2  libtbbmalloc.so.2  libtbbmalloc_debug.so.2  libtbbmalloc_proxy.so.2
USD/plugin/: CMakeLists.txt
USD/plugin/usd/: usdMujoco.lib
USD/windows/lib/: usd_boost.lib  usd_js.lib  usd_kind.lib  usd_pegtl.lib  usd_plug.lib  usd_tf.lib  usd_usd.lib  usd_usdLux.lib  usd_usdRender.lib  usd_usdSkel.lib  usd_usdUtils.lib
resources/input/: mujoco_menagerie
resources/input/furniture/: cabinet.urdf
resources/input/iCub/: iCub.urdf
resources/output/: cabinet_boxified.urdf
scripts/: multiverse_parser  multiverse_parser.cmd
src/multiverse_parser/: __init__.py  __main__.py
src/multiverse_parser/exporter/: mjcf_exporter.py  urdf_exporter.py
tests/: requirements.txt  test_boxify.py  test_factory.py  test_multiverse_parser.py
(+295 files in other folders)
