[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multiverse_parser"
version = "0.0.3"
authors = [
  { name="Giang Nguyen", email="hoanggia@uni-bremen.de" },
]
description = "A parser that converts between different scene descriptions"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"

dependencies = [
    "numpy",
    "Pillow",
    "scipy",
    "urdf-parser-py",
    "rospkg",
    "mujoco",
]

scripts = { multiverse_parser = "multiverse_parser.__main__:main" }

[project.urls]
"Homepage" = "https://github.com/Multiverse-Framework/Multiverse"
"Bug Tracker" = "https://github.com/Multiverse-Framework/Multiverse-Parser/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"multiverse_parser" = ["external.tar.gz"]